# aoc2025

./: LICENSE  aoc2025.cabal
app/: Common.hs  Main.hs
app/Days/: D1.hs  D2.hs
