cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             YilunAllenChen
maintainer:         allenchenyilun1999@gmail.com
category:           Personal
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options:
        -Wall
        -O0
        -fno-split-sections

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    other-modules:    Days.D1
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
